<!--
  ~ Copyright (c) 2020 Tomás Gray
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Capstone</string>
    <!-- Development -->
    <!--<string name="placeholder_text">Placeholder</string>-->
    <!-- Production -->
    <string name="placeholder_text"> </string>
    <!-- Activity titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_term_detail">TermDetailActivity</string>
    <string name="title_activity_faculty_details">FacultyDetailsActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >= 4 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Bottom nav -->
    <string name="user_profile">User profile</string>
    <string name="faculty">Faculty</string>
    <string name="coursework">Coursework</string>
    <string name="user_image">User image</string>
    <string name="days_left">days left</string>
    <string name="Courses">Courses</string>

    <string name="coursework_overview">Coursework Overview</string>
    <string name="faculty_overview">Faculty</string>
    <string name="term_detail">Term Detail</string>
    <string name="phone_icon">Phone icon</string>
    <string name="email_icon">Email icon</string>
    <string name="faculty_details">Faculty details</string>
    <string name="alert_me_text">Alert me when I am approaching the end date for this course</string>
    <string name="assessments">Assessments</string>
    <string name="notes">Notes</string>
    <string name="course_details">Course Details</string>
    <string name="add">+</string>
    <string name="progress">Progress</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="title_activity_note_editor">NoteEditorActivity</string>
    <string name="save">SAVE</string>
    <string name="enter_notes">Enter notes for this course…</string>
    <string name="edit_note">Edit note</string>
    <string name="new_note">New note</string>
    <string name="title_activity_assessment_detail">AssessmentDetailActivity</string>
    <string name="competent">COMPETENT</string>
    <string name="approaching_competence">APPROACHING COMPETENCE</string>
    <string name="not_competent">NOT COMPETENT</string>
    <string name="scheduled_for">Scheduled for:</string>
    <string name="type">Type:</string>
    <string name="unscheduled">Unscheduled</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="id">ID:</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="user_profile_avatar">User profile avatar</string>
    <string name="zip">Zip</string>
    <string name="country">Country</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="example_email">name@example.com</string>
    <string name="phone">Phone</string>
    <string name="example_phone">(xxx) xxx-xxxx</string>
    <string name="enter_street_address">Enter street address</string>
    <string name="optional">(Optional)</string>
    <string name="edit_personal">Edit personal information</string>
    <string name="postal_code">Postal code</string>
    <string name="city_name">City name</string>
    <string name="state_or_st">State or ST</string>
    <string name="office_hours">Office Hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="welcome_uhk">Welcome to the University of Hardt-Knox</string>
    <string name="term_progress">Term Progress</string>
</resources>
