<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Tomás Gray
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_coursework"
        android:icon="@drawable/ic_coursework"
        android:title="@string/coursework" />

    <item
        android:id="@+id/navigation_faculty"
        android:icon="@drawable/ic_faculty"
        android:title="@string/faculty" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_icon"
        android:title="@string/user_profile" />

</menu>
